5_Ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt"
spec:
  rules:
  - host: democluster.dasmulli.at
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-frontend
          servicePort: 80
  tls:
  - hosts:
    - democluster.dasmulli.at
    secretName: democluster-tls
