5_Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: democluster.dasmulli.at
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-frontend
          servicePort: 80
